add link on index

--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 </head>
 <body>
     <header>Best Header</header>
+    <a href="#"></a>
+    <a href="#"></a>
+    <a href="#"></a>  
 </body>
 </html>
