add text <p>Tutorial in file README.md</p>

--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
 </head>
 <body>
     <header>Best Header</header>
-    <a href="#"></a>
-    <a href="#"></a>
-    <a href="#"></a>     
+<p>Tutorial in file README.md</p>    
 </body>
 </html>
